<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_weight="0.4">
            <View
                android:id="@+id/colorSquare"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="77.5dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="155dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/hexCode"
                android:text="@string/hex"
                android:textSize="20sp" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.06" />

                <TextView
                    android:id="@+id/redValue"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.1"
                    android:text="@string/red" />


                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.795"
                    android:max="255" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.04" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.06" />

                <TextView
                    android:id="@+id/greenValue"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.1"
                    android:text="@string/green" />


                <SeekBar
                    android:id="@+id/seekBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.795"
                    android:max="255" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.04" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.06" />

                <TextView
                    android:id="@+id/blueValue"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.1"
                    android:text="@string/blue" />


                <SeekBar
                    android:id="@+id/seekBar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.795"
                    android:max="255" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.04" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                />

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/hsv" />
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                />
            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:padding="2.5dp"
                android:text="@string/loc"  />
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                />
            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/search"  />
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>